# pymdwiki

./: .env  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rebuild.bat  rebuild.sh  requirements.txt  uv_run.bat  uv_run.sh
app/: config.py  main.py
app/src/: jupyter_client.py  jupyter_extension.py  markdown_extensions.py  tasks.py
app/template/default/: _footer.html  _header.html  base.html  document.html  edit.html  jupyter.js  pymdwiki.css
app/wiki/: main.md
wiki/: main.md
