[project]
name = "pymdwiki"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jupyter-client>=8.6.3",
    "markdown>=3.9",
    "nbformat>=5.10.4",
    "pygments>=2.19.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
